--- a/signin.yml
+++ b/signin.yml
@@ -7,22 +7,12 @@ on:
   workflow_dispatch:
 jobs:
   signin:
-    name: Aliyun Signin
+    name: WWMHYY2323-ALIYUN
     runs-on: ubuntu-latest
     steps:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
-          REFRESH_TOKENS: ${{ secrets.REFRESH_TOKENS }}
-          GP_TOKEN: ${{ secrets.GP_TOKEN}}
-          PUSH_TYPES: ''
-          SERVERCHAN_SEND_KEY: ${{ secrets.SERVERCHAN_SEND_KEY }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
-          SMTP_HOST: ${{ secrets.SMTP_HOST }}
-          SMTP_PORT: ${{ secrets.SMTP_PORT }}
-          SMTP_TLS: ${{ secrets.SMTP_TLS }}
-          SMTP_USER: ${{ secrets.SMTP_USER }}
-          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-          SMTP_SENDER: ${{ secrets.SMTP_SENDER }}
-          SMTP_RECEIVER: ${{ secrets.SMTP_RECEIVER }}
+          REFRESH_TOKENS: ${{ zCYlK03c5eqFMzPJxHO6wuq3M3p2bUayTgRsmMIF_kvxz202_eGo1wAsqGhlooh2 }}
+          GP_TOKEN: ${{ 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}}
+          PUSH_TYPES: 'pushplus'
+          PUSHPLUS_TOKEN: ${{ 5f8ba50e8a9c4065ab39b3c103411704 }}
