--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
-          REFRESH_TOKENS: ${{ zCYlK03c5eqFMzPJxHO6wuq3M3p2bUayTgRsmMIF_kvxz202_eGo1wAsqGhlooh2 }}
-          GP_TOKEN: ${{ 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}}
-          PUSH_TYPES: 'pushplus'
-          PUSHPLUS_TOKEN: ${{ 5f8ba50e8a9c4065ab39b3c103411704 }}
+          REFRESH_TOKENS: zCYlK03c5eqFMzPJxHO6wuq3M3p2bUayTgRsmMIF_kvxz202_eGo1wAsqGhlooh2
+          GP_TOKEN: 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
+          PUSH_TYPES: pushplus
+          PUSHPLUS_TOKEN: 5f8ba50e8a9c4065ab39b3c103411704
