--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
-          REFRESH_TOKENS: 29e2bf5795e14822b77b4c9d3ea5ab68
+          REFRESH_TOKENS: 9dd78cef5ab0471698fbb88bad64b24c
           GP_TOKEN: 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
+          DO_NOT_REWARD: 'true'
           PUSH_TYPES: pushplus
           PUSHPLUS_TOKEN: 5f8ba50e8a9c4065ab39b3c103411704
