--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: ImYrS/aliyun-auto-signin@main
         with:
-          REFRESH_TOKENS: 9dd78cef5ab0471698fbb88bad64b24c
+          REFRESH_TOKENS: eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJzdWIiOiJhNmZiOGMzZmM2NTg0MGZkYTE3NTExZDEwYjljMjMwNyIsImF1ZCI6Ijc2OTE3Y2NjY2Q0NDQxYzM5NDU3YTA0ZjYwODRmYjJmIiwiZXhwIjoxNjkyMDY1NTQ0LCJpYXQiOjE2ODQyODk1NDR9.sX09nyVbNeof8o8zUgZFcw1UEWqBpcRlCSfWB_X4tEfna37HyAjohHXFaNUIExLac9ewsfzItqhe3QF5g5_bHA
           GP_TOKEN: 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
           DO_NOT_REWARD: 'true'
           PUSH_TYPES: pushplus
